<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <LinearLayout
        android:background="@color/com_daynight_dialog_bg"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/close_dialog"
                android:background="@drawable/more_btn_selector2"
                android:src="@drawable/ic_close_white"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <ImageView
                android:id="@+id/vip_icon"
                android:background="@drawable/vip_icon"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_below="@id/vip_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/remove_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/button_gotit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:layout_margin="16dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:shapeAppearance="@style/Rounded" />

        <TextView
            android:id="@+id/sub_description"
            android:text="@string/sub_description"
            android:textSize="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="#929292"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>