<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="1dp"
    app:cardElevation="10dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.0dip"
        android:layout_marginStart="4.0dip"
        android:layout_marginEnd="4.0dip">
        <TextView
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:text="@string/how_to_use"
            android:id="@+id/how_to_use_post"
            android:layout_marginStart="16.0dip"
            android:layout_marginEnd="16.0dip" />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:layout_marginBottom="18.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginEnd="8.0dip">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip"
                android:text="@string/help_open_instagram"
                android:textSize="16.0sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_share"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/help_select_share_or_copy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_share_to"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_alignBottom="@id/img_share"
                android:layout_alignStart="@id/img_share"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="13dp"
                android:layout_alignLeft="@id/img_share"
                android:layout_marginLeft="30dp" />
        </RelativeLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:layout_marginBottom="18.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginEnd="8.0dip">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_two" />
            <TextView
                android:id="@+id/tv_share_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip"
                android:text="@string/com_select"
                android:textSize="16.0sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            android:src="@drawable/help_select_myapp"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="28.0dip"
            android:layout_marginEnd="16.0dip"
            android:text="@string/com_or"
            android:textSize="32.0sp"
            android:textStyle="bold" />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:layout_marginBottom="18.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginEnd="8.0dip">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_one" />
            <TextView
                android:textSize="16.0sp"
                android:text="@string/help_open_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_share2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/help_select_share_or_copy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_copy_link"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_alignBottom="@id/img_share2"
                android:layout_alignStart="@id/img_share2"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="13dp"
                android:layout_alignLeft="@id/img_share2"
                android:layout_marginLeft="30dp" />
        </RelativeLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:layout_marginBottom="18.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginEnd="8.0dip">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_two" />
            <TextView
                android:textSize="16.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_launch_app"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            android:src="@drawable/help_select_my_app"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
