<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.fragment"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginStart="12dp"
            android:id="@+id/title_group"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_pic"
                android:src="@drawable/ic_action_help"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/profile_pic"
                android:text="@string/app_name"
                android:textStyle="bold"></TextView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                >
                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/daynight_text"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyCheckBox2"
                    android:text="@string/all"
                    android:textColor="@color/daynight_text"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" />

            </LinearLayout>

        </RelativeLayout>


        <com.instadownloader.instasave.igsave.ins.ui.main.MyRecycleView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_group"
            android:layout_marginBottom="50dp"
            android:padding="8dp" />

    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/download"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginBottom="6dp"
        app:shapeAppearance="@style/Rounded" />
</FrameLayout>

