<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="1dp"
    app:cardElevation="10dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4.0dip"
        android:layout_marginTop="11.0dip"
        android:layout_marginEnd="4.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/how_to_use_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="18.0dip"
            android:layout_marginEnd="16.0dip"
            android:text="@string/how_to_use"
            android:textSize="16.0sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.0dip"
            android:layout_marginTop="18.0dip"
            android:layout_marginEnd="8.0dip"
            android:layout_marginBottom="18.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip"
                android:text="@string/help_open_instagram"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/help_story1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/help_story2" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            ></View>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.0dip"
            android:layout_margin="16dp"
            android:layout_marginTop="18.0dip"
            android:layout_marginEnd="8.0dip"
            android:layout_marginBottom="18.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_two" />

            <TextView
                android:id="@+id/tv_share_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8.0dip"
                android:layout_marginEnd="8.0dip"
                android:text="@string/com_launch_app"
                android:textSize="16.0sp" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            android:src="@drawable/help_select_myapp"
            android:adjustViewBounds="true" />
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_margin="16dp"

                android:adjustViewBounds="true"
                android:src="@drawable/help_story3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8.0dip"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8.0dip"
                android:layout_margin="16dp"

                android:adjustViewBounds="true"
                android:src="@drawable/help_story4" />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
